--- a/.github/workflows/actions.yaml
+++ b/.github/workflows/actions.yaml
@@ -4,7 +4,7 @@ on:
   push:
     branches:
       - master
-      - dev_34
+      - dev_35
 jobs:
   build_and_push:
     runs-on: ubuntu-latest
@@ -25,9 +25,12 @@ jobs:
     runs-on: ubuntu-latest
     needs: build_and_push
     env:
+      SECRET_KEY: ${{ secrets.SECRET_KEY }}
       POSTGRES_DB: ${{ secrets.POSTGRES_DB }}
       POSTGRES_USER: ${{ secrets.POSTGRES_USER }}
       POSTGRES_PASSWORD: ${{ secrets.POSTGRES_PASSWORD }}
+      SOCIAL_AUTH_VK_OAUTH2_KEY: ${{ secrets.SOCIAL_AUTH_VK_OAUTH2_KEY }}
+      SOCIAL_AUTH_VK_OAUTH2_SECRET: ${{ secrets.SOCIAL_AUTH_VK_OAUTH2_SECRET }}
     steps:
       - name: clone code
         uses: actions/checkout@v3.5.2
