--- a/docker-compose-ci.yaml
+++ b/docker-compose-ci.yaml
@@ -27,6 +27,8 @@ services:
       POSTGRES_DB: ${POSTGRES_DB}
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      SOCIAL_AUTH_VK_OAUTH2_KEY: ${SOCIAL_AUTH_VK_OAUTH2_KEY}
+      SOCIAL_AUTH_VK_OAUTH2_SECRET: ${SOCIAL_AUTH_VK_OAUTH2_SECRET}
     restart: always
     depends_on:
       db:
@@ -49,7 +51,7 @@ services:
     command: sh -c "python ./manage.py migrate" 
 
   frontend:
-    image: sermalenk/skypro-front:lesson-34
+    image: sermalenk/skypro-front:lesson-35
     container_name: frontend
     restart: always
     ports:
