--- a/.github/workflows/actions.yaml
+++ b/.github/workflows/actions.yaml
@@ -4,7 +4,7 @@ on:
   push:
     branches:
       - master
-      - dev_37
+      - dev_38
 jobs:
   build_and_push:
     runs-on: ubuntu-latest
@@ -31,6 +31,7 @@ jobs:
       POSTGRES_PASSWORD: ${{ secrets.POSTGRES_PASSWORD }}
       SOCIAL_AUTH_VK_OAUTH2_KEY: ${{ secrets.SOCIAL_AUTH_VK_OAUTH2_KEY }}
       SOCIAL_AUTH_VK_OAUTH2_SECRET: ${{ secrets.SOCIAL_AUTH_VK_OAUTH2_SECRET }}
+      BOT_TOKEN: ${{ secrets.BOT_TOKEN }}
     steps:
       - name: clone code
         uses: actions/checkout@v3.5.2
